<resources>
    <string name="app_name">Nightclub App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="account_header">Profile</string>
    <string name="empty_header">Info</string>


    <string name="profile_title">User Profile</string>
    <string name="profile_summary">View use profile</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="are_you_a_club_employee_n_sign_in_here_to_view_your_clubs_info">Are you a club employee?\n Sign in here to view your clubs info.</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="go">GO!</string>
    <string name="closed_today">Closed Today</string>
    <string name="open_today_from">Open Today From %1$s</string>
    <string name="nearby_club">Nearby Club</string>

    <string name="checkout">Checkout</string>
    <string name="applicable_taxes">+applicable taxes</string>
    <string name="order">Order</string>

    <string name="follow">Follow Us On</string>
    <string name="call_us">Call Us:</string>
    <string name="email_us">Email us:</string>
    <string name="address">Address:</string>
    <string name="app_phone_number">(999) 119–7253</string>
    <string name="app_email">nightclubcmpt362@gmail.com</string>
    <string name="group_address">8888 University Dr, Burnaby, BC V5A 1S6</string>
    <string name="eula">https://nightclub.vercel.app/eula</string>


</resources>