<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contact.ContactFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/contactIV"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:clickable="false"
            android:src="@drawable/contact_us"

            />

        <LinearLayout
            android:id="@+id/phoneLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/contactIV"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999999"
                android:clickable="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:clickable="false"
                    android:src="@drawable/ic_action_call"

                    />

                <TextView
                    android:id="@+id/callTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:clickable="false"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:textSize="20sp"
                    android:text="@string/app_phone_number"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999999"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneLL"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:clickable="false"
                    android:src="@drawable/ic_action_email" />

                <TextView
                    android:id="@+id/emailTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:clickable="false"
                    android:paddingTop="10sp"
                    android:paddingBottom="10sp"
                    android:textSize="20sp"
                    android:text="@string/app_email"
                    />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999999"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addressLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailLL"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:clickable="false"
                    android:src="@drawable/ic_action_contact_location"

                    />

                <TextView
                    android:id="@+id/addressTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:clickable="false"
                    android:paddingTop="10sp"
                    android:paddingEnd="5sp"
                    android:paddingBottom="10sp"
                    android:textSize="20sp"
                    android:text="@string/group_address"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#999999"
                android:clickable="false" />
        </LinearLayout>


    </RelativeLayout>
</ScrollView>